--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,12 +2,30 @@
     margin-bottom: 0;
 }
 
-.img_avatar{
+.img_avatar_small{
     width: 50px;
     height: 50px;
+}
+
+.img_avatar_middle{
+    width: 150px;
+    height: 150px;
 }
 
 .img_welcome{
     width: 200px;
     height: 100px;
+}
+
+#avatar .avatar{
+    margin: 2px auto;
+    width: 100px;
+    z-index: 6;
+    margin-top: -28px;
+    opacity:0;
+    height: 32px;
+}
+#avatar .btn.avatar-button{
+    margin-top: 30px;
+    z-index: 3;
 }
