--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,9 @@
+/*去掉顶部导航条下方的空白*/
 .navbar{
     margin-bottom: 0;
 }
-
+/*去掉顶部导航条下方的空白*/
+/*不同部分图片的大小*/
 .img_welcome{
     width: 200px;
     height: 100px;
@@ -16,7 +18,8 @@
     width: 150px;
     height: 150px;
 }
-
+/*不同部分图片的大小*/
+/*userInfo.blade.php中上传按钮*/
 #avatar .avatar{
     margin: 2px auto;
     width: 100px;
@@ -29,3 +32,15 @@
     margin-top: 30px;
     z-index: 3;
 }
+/*userInfo.blade.php中上传按钮*/
+/*show.blade.php中右侧关于作者*/
+.user-statics .user-actions{
+    margin-top: 20px;
+}
+.user-statics{
+    display: flex;
+}
+.statics-item{
+    padding: 2px 20px;
+}
+/*show.blade.php中右侧关于作者*/
