--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,18 @@
+/*##########master##########*/
+/*master/master.blade.php*/
 /*去掉顶部导航条下方的空白*/
 .navbar{
     margin-bottom: 0;
 }
 /*去掉顶部导航条下方的空白*/
+
+/*限制图片最大宽高*/
+img{
+    max-width: 500px;
+    max-height: 500px;
+}
+/*限制图片最大宽高*/
+
 /*不同部分图片的大小*/
 .img_welcome{
     width: 200px;
@@ -19,20 +29,55 @@
     height: 150px;
 }
 /*不同部分图片的大小*/
-/*userInfo.blade.php中上传按钮*/
+
+/*##########office##########*/
+/*office.blade.php中新人报道列表行距*/
+.office-line{
+    margin-top: 0;
+    padding-top: 20px;
+}
+/*office.blade.php中新人报道列表行距*/
+
+/*##########user##########*/
+/*infoEdit.blade.php中上传按钮*/
 #avatar .avatar{
     margin: 2px auto;
     width: 100px;
     z-index: 6;
     margin-top: -28px;
     opacity:0;
-    height: 32px;
+    height: 50px;
 }
 #avatar .btn.avatar-button{
     margin-top: 30px;
     z-index: 3;
 }
-/*userInfo.blade.php中上传按钮*/
+/*infoEdit.blade.php中上传按钮*/
+
+/*infoEdit.blade.php中表单间距*/
+.user-form-line{
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+.user-form-lable-line{
+    padding-top: 5px;
+}
+/*infoEdit.blade.php中表单间距*/
+
+/*##########forum##########*/
+/*show.blade.php中评论标题栏间距*/
+.forum-line{
+    margin-top: 0;
+    padding-top: 20px;
+}
+/*show.blade.php中评论标题栏间距*/
+
+/*show.blade.php中评论标题栏间距*/
+.forum-show-line{
+    padding-top: 15px
+}
+/*show.blade.php中评论标题栏间距*/
+
 /*show.blade.php中右侧关于作者*/
 .user-statics{
     display: flex;
@@ -42,9 +87,3 @@
     padding: 2px 20px;
 }
 /*show.blade.php中右侧关于作者*/
-/*限制图片最大宽高*/
-img{
-    max-width: 500px;
-    max-height: 500px;
-}
-/*限制图片最大宽高*/
