--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1,13 +1,12 @@
 /*infoEdit.blade.php中上传按钮*/
-#avatar .avatar{
-    margin: 2px auto;
-    width: 100px;
+.avatar{
+    margin: -34px auto 0;
+    width: 110px;
+    height: 34px;
+    opacity: 0;
     z-index: 6;
-    margin-top: -28px;
-    opacity:0;
-    height: 50px;
 }
-#avatar .btn.avatar-button{
+.avatar-button{
     margin-top: 30px;
     z-index: 3;
 }
