--- a/public/css/warship.css
+++ b/public/css/warship.css
@@ -7,6 +7,29 @@
     z-index: 6;
 }
 .picture-button{
-    margin-top: 30px;
     z-index: 3;
+}
+
+/* create.blade.php 中表单间距 */
+.warship-form-line{
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+.warship-form-label-line{
+    padding-top: 5px;
+}
+
+/* 立绘大小 */
+.warship-picture-meddle{
+    width: 200px;
+    height: 320px;
+}
+.warship-picture-small{
+    width: 100px;
+    height: 160px;
+}
+
+/* warship.blade.php 中表格填充 */
+.warship-table-margin{
+    margin-top: 70px;
 }
