--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1,4 +1,25 @@
-/* infoEdit.blade.php 中上传按钮 */
+/* ********** login.blade.php ********** */
+/* 表单间距 */
+.user-login-line{
+    margin-top: 30px;
+}
+.user-login-line-captcha{
+    margin-top: 10px;
+}
+
+/* 眼睛位置 */
+.user-login-eye{
+    margin-top: 50px;
+}
+
+/* 眼睛大小 */
+.user-login-eye-size{
+    font-size: 200px;
+}
+/* ********** login.blade.php ********** */
+
+/* ********** infoEdit.blade.php ********** */
+/* 上传按钮 */
 .avatar{
     margin: -34px auto 0;
     width: 110px;
@@ -11,7 +32,7 @@
     z-index: 3;
 }
 
-/* infoEdit.blade.php 中表单间距 */
+/* 表单间距 */
 .user-form-line{
     padding-top: 25px;
     padding-bottom: 25px;
@@ -19,24 +40,4 @@
 .user-form-label-line{
     padding-top: 5px;
 }
-
-/* login.blade.php 中表单间距 */
-.user-login-line{
-    margin-top: 10px;
-}
-
-/* login.blade.php 中眼睛位置 */
-.user-login-eye{
-    margin-top: 50px;
-}
-
-/* login.blade.php 中眼睛大小 */
-.user-login-eye-size{
-    font-size: 200px;
-}
-
-/* login.blade.php 中按钮位置 */
-.user-login-btn{
-    margin-top: 20px;
-    margin-bottom: 50px;
-}
+/* ********** infoEdit.blade.php ********** */
