--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,8 @@
 
 /* 网页主体和背景图片 */
 .master-body{
-    background: url('/image/background/ssv_fortress.jpg') fixed;
-    background-size: 100%;
+    background: url('/image/background/ssv_fortress.jpg') no-repeat fixed;
+    background-size:cover;
     min-width: 970px;
 }
 
@@ -30,6 +30,10 @@ img{
 .img-avatar-middle{
     width: 150px;
     height: 150px;
+}
+.img-avatar-large{
+    width: 300px;
+    height: 300px;
 }
 
 /* 去掉顶部导航条下方的空白 */
@@ -92,20 +96,21 @@ img{
     padding-top: 13px;
 }
 
-/* 顶部导航区域已登录用户信息 */
+/* 顶部导航区域用户信息 */
 .master-top-user-login{
     width:100%;
     height: 100px;
-    font-size: 20px;
-    padding-top: 15px;
+    line-height: 50px;
+    font-size: 18px;
 }
-
-/* 顶部导航区域未登录用户信息 */
 .master-top-user-logout{
     width:100%;
     height: 100px;
-    font-size: 20px;
-    padding-top: 35px;
+    line-height: 100px;
+    font-size: 18px;
+}
+.master-top-user-login>p,.master-top-user-logout>p{
+    margin: 0;
 }
 
 /* 去掉顶部面包屑导航条下方的空白 */
