--- a/public/css/factory.css
+++ b/public/css/factory.css
@@ -2,64 +2,76 @@
     perspective: 800px;
 }
 .model-container{
-    width: 200px;
-    height:200px;
+    width: 400px;
+    height:400px;
     position: relative;
-    margin: 100px auto;
+    margin: 200px auto;
     transform-style: preserve-3d;
     transition:5s;
 }
 .model-container .model-side{
-    width: 200px;
-    height: 200px;
-    line-height: 200px;
+    width: 400px;
+    height: 400px;
+    line-height: 400px;
     position: absolute;
     border:2px solid #0033FF;
     text-align: center;
 }
 .model-left{
-    left:-202px;
-    transform: translateZ(100px) rotateY(-90deg);
+    left:-402px;
+    transform: translateZ(200px) rotateY(-90deg);
     transform-origin: right;
     background: url(/image/avatar/lex.png);
     background-size:100% 100%;
 }
 .model-right{
-    left:202px;
-    transform: translateZ(100px) rotateY(90deg);
+    left:402px;
+    transform: translateZ(200px) rotateY(90deg);
     transform-origin: left;
     background: url(/image/avatar/mao.jpg);
     background-size:100% 100%;
 }
 .model-top{
-    top:-202px;
-    transform: translateZ(100px) rotateX(90deg);
+    top:-402px;
+    transform: translateZ(200px) rotateX(90deg);
     transform-origin: bottom;
     background: url(/image/avatar/ougen.jpg);
     background-size:100% 100%;
 }
 .model-bottom{
-    top:202px;
-    transform:translateZ(100px) rotateX(-90deg);
+    top:402px;
+    transform:translateZ(200px) rotateX(-90deg);
     transform-origin: top;
     background: url(/image/avatar/vv.png);
     background-size:100% 100%;
 }
 .model-back{
-    transform:translateZ(-100px) rotateY(180deg);
+    transform:translateZ(-200px) rotateY(180deg);
     z-index:1;
     background: url(/image/avatar/quincy.jpg);
     background-size:100% 100%;
 }
 .model-front{
     z-index:2;
-    transform:translateZ(100px);
+    transform:translateZ(200px);
     background: url(/image/avatar/mao_remake.jpg);
     background-size:100% 100%;
 }
 .model-container-show-front{}
-.model-container-show-back{ transform:translateZ(-75px) rotateY(180deg); }
-.model-container-show-left{ transform:translateZ(-75px) rotateY(90deg); }
-.model-container-show-right{ transform:translateZ(-75px) rotateY(-90deg); }
-.model-container-show-top{ transform:translateZ(-75px) rotateX(-90deg); }
-.model-container-show-bottom{ transform:translateZ(-75px) rotateX(90deg); }
+.model-container-show-back{ transform:translateZ(0px) rotateY(180deg); }
+.model-container-show-left{ transform:translateZ(0px) rotateY(90deg); }
+.model-container-show-right{ transform:translateZ(0px) rotateY(-90deg); }
+.model-container-show-top{ transform:translateZ(0px) rotateX(-90deg); }
+.model-container-show-bottom{ transform:translateZ(0px) rotateX(90deg); }
+
+/* create.blade.php 中上传按钮 */
+.picture{
+    position: absolute;
+    width: 568px;
+    height: 45.5px;
+    opacity: 0;
+    z-index: 6;
+}
+.picture-button{
+    z-index: 3;
+}
