--- a/public/css/factory.css
+++ b/public/css/factory.css
@@ -1,3 +1,4 @@
+/* show.blade.php 立方体变换 */
 .model-stage{
     perspective: 800px;
 }
@@ -14,48 +15,48 @@
     height: 400px;
     line-height: 400px;
     position: absolute;
-    border:2px solid #0033FF;
+    /*border:2px solid #0033FF;*/
     text-align: center;
 }
 .model-left{
     left:-402px;
     transform: translateZ(200px) rotateY(-90deg);
     transform-origin: right;
-    background: url(/image/avatar/lex.png);
-    background-size:100% 100%;
+    /*background: url(/image/avatar/lex.png);
+    background-size:100% 100%;*/
 }
 .model-right{
     left:402px;
     transform: translateZ(200px) rotateY(90deg);
     transform-origin: left;
-    background: url(/image/avatar/mao.jpg);
-    background-size:100% 100%;
+    /*background: url(/image/avatar/mao.jpg);
+    background-size:100% 100%;*/
 }
 .model-top{
     top:-402px;
     transform: translateZ(200px) rotateX(90deg);
     transform-origin: bottom;
-    background: url(/image/avatar/ougen.jpg);
-    background-size:100% 100%;
+    /*background: url(/image/avatar/ougen.jpg);
+    background-size:100% 100%;*/
 }
 .model-bottom{
     top:402px;
     transform:translateZ(200px) rotateX(-90deg);
     transform-origin: top;
-    background: url(/image/avatar/vv.png);
-    background-size:100% 100%;
+    /*background: url(/image/avatar/vv.png);
+    background-size:100% 100%;*/
 }
 .model-back{
     transform:translateZ(-200px) rotateY(180deg);
     z-index:1;
-    background: url(/image/avatar/quincy.jpg);
-    background-size:100% 100%;
+    /*background: url(/image/avatar/quincy.jpg);
+    background-size:100% 100%;*/
 }
 .model-front{
     z-index:2;
     transform:translateZ(200px);
-    background: url(/image/avatar/mao_remake.jpg);
-    background-size:100% 100%;
+    /*background: url(/image/avatar/mao_remake.jpg);
+    background-size:100% 100%;*/
 }
 .model-container-show-front{}
 .model-container-show-back{ transform:translateZ(0px) rotateY(180deg); }
@@ -64,14 +65,27 @@
 .model-container-show-top{ transform:translateZ(0px) rotateX(-90deg); }
 .model-container-show-bottom{ transform:translateZ(0px) rotateX(90deg); }
 
-/* create.blade.php 中上传按钮 */
+.view-picture-size{
+    height: 100%;
+    width: 100%;
+}
+
+/* show.blade.php 模态框表单文件上传按钮 */
 .picture{
     position: absolute;
     width: 568px;
-    height: 45.5px;
+    height: 36px;
     opacity: 0;
     z-index: 6;
 }
 .picture-button{
     z-index: 3;
+}
+
+/* show.blade.php 右侧功能面板*/
+.function-panel{
+    margin: 150px auto;
+}
+.function-panel-btn{
+    margin: 10px auto;
 }
