--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,12 +4,12 @@
 .master-body{
     background: url('/image/background/ssv_fortress.jpg') no-repeat fixed;
     background-size:cover;
-    min-width: 970px;
+    min-width: 1170px;
 }
 
 /* 容器最小宽度 */
 .container-size{
-    min-width: 970px;
+    min-width: 1170px;
 }
 
 /* 不同部分图片的大小 */
@@ -77,13 +77,13 @@
 }
 
 /* 顶部导航区域 <dt> 排列方式 */
-.dt-row-by-3>dt{
+.dt-row-by-3 > dt{
     width:33.333%;
     float:left;
 }
 
 /* 顶部导航区域 <dt> 内部 <a> */
-.dt-row-by-3>dt>a{
+.dt-row-by-3 > dt > a{
     width:100%;
     height: 50px;
     font-size: 18px;
@@ -91,7 +91,7 @@
 }
 
 /* 顶部导航区域用户信息 */
-.master-top-user-login{
+/*.master-top-user-login{
     width:100%;
     height: 100px;
     line-height: 50px;
@@ -103,9 +103,9 @@
     line-height: 100px;
     font-size: 18px;
 }
-.master-top-user-login>p,.master-top-user-logout>p{
+.master-top-user-login > p , .master-top-user-logout > p{
     margin: 0;
-}
+}*/
 
 /* 去掉顶部面包屑导航条下方的空白 */
 .breadcrumb{
