--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,15 +49,6 @@
 }
 
 /* 解决网页顶部导航区域栅格在填充内容后不一样高的问题 */
-/*.row [class *= "col-"]{
-    margin-bottom: -50px;
-    padding-bottom: 50px;
-    padding-left: 0;
-    padding-right: 0;
-}
-.row{
-    overflow: hidden;
-}*/
 .master-top [class *= "col-"]{
     margin-bottom: -50px;
     padding-bottom: 50px;
@@ -75,13 +66,11 @@
     font-size: 30px;
     padding-top: 30px;
 }
-
 /* 顶部导航区域 <dt> 排列方式 */
 .dt-row-by-3 > dt{
     width:33.333%;
     float:left;
 }
-
 /* 顶部导航区域 <dt> 内部 <a> */
 .dt-row-by-3 > dt > a{
     width:100%;
@@ -89,23 +78,6 @@
     font-size: 18px;
     padding-top: 13px;
 }
-
-/* 顶部导航区域用户信息 */
-/*.master-top-user-login{
-    width:100%;
-    height: 100px;
-    line-height: 50px;
-    font-size: 18px;
-}
-.master-top-user-logout{
-    width:100%;
-    height: 100px;
-    line-height: 100px;
-    font-size: 18px;
-}
-.master-top-user-login > p , .master-top-user-logout > p{
-    margin: 0;
-}*/
 
 /* 去掉顶部面包屑导航条下方的空白 */
 .breadcrumb{
@@ -127,9 +99,18 @@
 
 /* 警告框位置 */
 .master-alert{
-    position: fixed;
-    bottom: 10%;
-    left: 0;
     width: 100%;
+    position: fixed;
+    left: 0; bottom: 10%;
     z-index: 50;
+}
+
+/* 私信容器 */
+.personal-letter-container{
+    max-height: 400px;
+    overflow: scroll;
+}
+/* 私信内容 */
+.personal-letter{
+    margin: 10px 20px;
 }
